--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
     "redux-logger": "^3.0.6",
     "redux-router": "^2.1.2",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.38.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
