--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "dev": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
+    "test:watch": "yarn run test -- --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,10 +54,12 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "babel-jest": "^27.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "jest": "^27.1.0"
+    "react-test-renderer": "^17.0.2"
+  },
+  "jest": {
+    "setupFilesAfterEnv": ["./pathToYour/setupTests.js"] 
   }
 }
